# Codes

./: .gitignore  A.cpp  B.cpp  CMakeLists.txt  GenOutput.cpp  a  criticalInput.txt  debug.txt  gen  hehe.txt  hello-world-helper.py  output1.txt  outputA.txt  pbds.cpp
AtCoder/: abc105_a.cpp  abc105_b.cpp  abc105_c.cpp  abc105_d.cpp  abc109_d.cpp  abc110_a.cpp  abc110_b.cpp  abc110_c.cpp  practice_1.cpp  practice_2.cpp
CS Academy/: Find Any Duplicate.cpp  Pokemon Evolution.cpp
CodeCafe/: a001.cpp  a003.cpp  a004.cpp  a005.cpp  a006.cpp  a007.cpp  a008.cpp  a009.cpp  a010.cpp  a011.cpp  a014.cpp  a016.cpp  a017.cpp  a019.py  a020.py  a021.py  a022.cpp  a022.py  a023.cpp  a027.cpp  a028.cpp  a029.cpp  a036.cpp  a037.cpp  a038.cpp  a041.cpp  a042.cpp  a043.py  a046.cpp  a047-2.cpp  a047.cpp  a051.py  a052.cpp  a052.py  a057.py  a057.txt  a058.cpp  a059.cpp  a061.cpp  a062.cpp  (+20 more)
Codechef/: GGCURR.cpp
Codeforces/: 1156B.cpp  1156C.cpp  510C.cpp
GCJ/: 4394486B.cpp  5374486pA.cpp
GeeksforGeeks/: Find out the Team.cpp  Lazy Pasha.cpp  Longest Sub-Array with Sum K.cpp  Minimum indexed character.cpp
ICPC/: 3135.cpp
LeetCode/: 327.cpp  4.cpp  Cracking the Safe.cpp  Letter Case Permutation.cpp  Populating Next Right Pointers in Each Node(2).cpp  Populating Next Right Pointers in Each Node.cpp
MISC/: 1.cpp  2.cpp  student-grade.txt
NCKU Online Judge/: 2.cpp
NCKUOnlineJudge/: 1.cpp  10.2.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.c  15.c  15.cpp  16.cpp  17.c  17.cpp  18.cpp  19.cpp  2.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  3.2.c  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  (+3 more)
(+730 files in other folders)
